<resources>
    <string name="app_name">Orlik</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Logowanie</string>
    <string name="title_activity_register">Rejestracja</string>
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="prompt__sec_password">Powtórz hasło</string>
    <string name="prompt_name">Imie</string>
    <string name="prompt_surname">Nazwisko</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Załóż konto</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Login musi posiadać co najmniej 3 znaki</string>
    <string name="invalid_name">Imie musi posiadać co najmniej 3 znaki</string>
    <string name="invalid_surname">Nazwisko musi posiadać co najmniej 3 znaki</string>
    <string name="invalid_password">Hasło musi posiadać co najmniej 5 znaków</string>
    <string name="invalid_sec_password">Różne hasła</string>
    <string name="login_failed">"Logowanie nieudane"</string>
    <string name="register_failed">"Rejestracja nieudana"</string>
    <string name="register_login_failed">"Podany login jest zajęty przez innego użytkownika"</string>
    <string name="register_success">"Zarejestrowano"</string>

    <!--    Strings from main activity-->
    <string name="logout_button">Wyloguj</string>
    <string name="main_friends_textView">Znajomi: </string>
    <string name="main_searchButton_hint">Login lub imie </string>
    <string name="main_searchFriends_textView">Szukaj użytkownikow: </string>
    <string name="main_friendsItem_textView">Imie i nazwisko </string>
    <string name="main_friendsItem_button">Zobacz Profil </string>


    <!--    Strings for gamesActivity-->
    <string name="title_activity_games">Mecze</string>
    <string name="games_search">Szukaj</string>
    <string name="games_search_title">Wyszukaj mecze w okolicy</string>
    <string name="games_checkbox_current">Użyj aktualnej lokalizacji</string>
    <string name="games_pitch_TextView">Rodzaj Boiska</string>
    <string name="games_range_TextView">Maksymalana odległość</string>

    <!--    Strings for organizeGames-->
    <string name="title_activity_organizeGames">Dodaj</string>
    <string name="organize_max_prompt">Maksymalna liczba graczy</string>
    <string name="organize_min_prompt">Minimalna liczba graczy</string>
    <string name="organize_match_button">Dodaj Mecz</string>
    <string name="organize_showPitch_button">Pokaż boiska w okolicy</string>
    <string name="organize_showInvalidPitch">Pokaż boiska oczekujące na dodanie</string>
    <string name="organize_pitch_button">Dodaj Boisko</string>
    <string name="organize_city_prompt">Miejscowość</string>
    <string name="organize_pitch_prompt">Wybierz boisko</string>
    <string name="organize_description_prompt">Opis(max 30 znakow)</string>
    <string name="organize_duration_prompt">Czas trwania meczu[min]</string>
    <string name="organize_address_prompt">Ulica, nr domu</string>
    <string name="organize_visibility_prompt">Ustaw widoczność</string>
    <string name="organize_date_prompt">Data i godzina </string>
    <string name="organize_join_to_organized_match">Zagraj</string>
    <string name="organize_addPitch_type">TypBoiska</string>
    <string name="organize_addPitch_locationButton">Wskaż na mapie</string>
    <string name="organize_addPitch_addPitchButton">Dodaj Boisko</string>

    <!--    Strings for settingsActivity-->
    <string name="title_activity_settings">Statystyki</string>

    <!--    Strings for profileActivity-->
    <string name="profile_deleteFriend_button">Usuń ze znajomych</string>
    <string name="profile_addFriend_button">Dodaj znajomego</string>
    <string name="profile_gameOrganized_textView">Organizowane mecze</string>
    <string name="profile_gameAttend_textView"> Nadchodzące mecze uzytkownika</string>
    <string name="profile_friends_textView"> Znajomi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    String for GameResultsFragment-->
    <string name="games_result_moreButton">Więcej</string>
    <string name="games_result_organizer_hint">Organizator</string>
    <string name="games_result_members_hint">Zapisani</string>
    <string name="games_result_date_hint">Data</string>
    <string name="games_result_address_hint">adres</string>
    <string name="games_result_visibility_hint">Prywatne/publiczne</string>
    <string name="games_result_membersRange_hint">ZakresUczestnikow</string>
    <string name="games_result_pitchType_hint">Typ Boiska</string>
    <string name="games_result_pitchRate_hint">Ocena Boiska</string>
    <string name="games_result_membersLogin_hint">Uczestnicy</string>
    <string name="games_result_getMatchButton_hint">Pokaż Mecz</string>
    <string name="games_result_status_hint">Status Boiska</string>

    <!--    String for PitchResultFragments-->
    <string name="pitchItem_details_button">Pokaż</string>

    <!--    String for pitchActivity-->
    <string name="pitch_confirm_button">Potwierdz lokalizacje</string>

    <!--    Strings for menu icon-->
    <string name="menu_icon_home">Profil</string>
    <string name="menu_icon_search">Szukaj</string>
    <string name="menu_icon_add">Dodaj</string>
    <string name="menu_icon_stats">Statystyki</string>
    <string name="menu_icon_admin">Admin</string>

    <!--    Strings for admin-->
    <string name="title_activity_admin">Administrator</string>
    <string name="admin_search_button">Szukaj</string>
    <string name="admin_search_user_hint">Szukaj Uzytkowników</string>
    <string name="admin_search_pitch_hint">Szukaj Boisk</string>

</resources>